Changelog v1.4.1 to v1.5.0
--------------------------
-Add new Help Tab, display a short help how to use PixelController
-Add Zoom Effect, add Zoom options (zoom in, zoom out, vertical, horizontal)
-Add Textwriter option (PingPong scrolling, left scrolling)
-Add new Minimum and Maximum Mixer
-Add new keyboard shortcut to select tabs (arrow keys)
-Fix use colorset name (instead of index) if a preset is saved
-Fix colorscroll GUI element initialization
-Fix Effect Rotate90 for non square output
-Fix Effect BeatHorizShift for exotic resolutions
-Fix Effect Rotozoom for exotic resolutions
-Fix Effect Texture deform for exotic resolutions
-Fix Mixer Checkbox for exotic resolutions
-Fix PixConCli JMX Query  
-Fix ColorSet, rarely visible smoothness bug
-Cleanup GUI, make grouping of controls more strict
-Reduce filesize of distribution file, remove unneeded files
-Remove support for Adavision product - does not exist anymore
-Update PixConCli, improve message handling
-Update Fire Generator, remove visible random pixels 
-Update PixelInvaders firmware, use the TPM2Net protocol to send data 
   Testcase: 2 PixelInvader Panels, ColorScroll Generator, no sound update
   Framerate old fw: 35fps, Framerate new fw: 140fps -> 400% faster!
   

Changelog v1.4.0 to v1.4.1
--------------------------
-Fix update TPM2.net implementation (add total packet bytes)
-Fix cleanup unused files
-Fix OSC listener, increased buffer size to 50kb so large image content can be sent via OSC
-Fix OSC address, expected: "/NAME" was: "NAME"
-Fix shuffle Colorset in Random mode, fix Issue#37
-Feature: disable beat detection if sound volume is too low
-Remove all references to the MD5 class, use Adler as caching mechanism (20x faster)
-Keep aspect ratio if internal buffer size is calculated


Changelog v1.3.1 to v1.4.0
--------------------------
-Add support for E1.31 devices
-Add more 8x8 icon images
-Add new effect, rotate 90 degrees
-Add option to hide internal Visuals to save CPU power